--- a/BMI_Remastered/Launch Screen/LaunchScreen.storyboard
+++ b/BMI_Remastered/Launch Screen/LaunchScreen.storyboard
@@ -17,15 +17,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="obG-Y5-kRd">
-                                <rect key="frame" x="0.0" y="876" width="414" height="0.0"/>
+                                <rect key="frame" x="0.0" y="876" width="577.33333333333337" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="HealthMetricsAppLogo" translatesAutoresizingMaskIntoConstraints="NO" id="59q-Nn-Y9N">
-                                <rect key="frame" x="118" y="209" width="178" height="167"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="HealthMetrics" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d9y-A7-DOF">
                                 <rect key="frame" x="92" y="435" width="231" height="42"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -33,13 +29,24 @@
                                 <color key="textColor" name="LaunchScreenTitleColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HealthMetricsAppLogo" translatesAutoresizingMaskIntoConstraints="NO" id="59q-Nn-Y9N">
+                                <rect key="frame" x="117.99999999999997" y="208.99999999999997" width="341.33333333333326" height="341.33333333333326"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="59q-Nn-Y9N" secondAttribute="height" multiplier="178:341" id="9YX-nz-wad"/>
+                                    <constraint firstAttribute="height" constant="341.32999999999998" id="Z61-fK-Nm1"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" name="LaunchScreenBackground"/>
                         <constraints>
                             <constraint firstItem="Bcu-3y-fUS" firstAttribute="centerX" secondItem="obG-Y5-kRd" secondAttribute="centerX" id="5cz-MP-9tL"/>
+                            <constraint firstItem="59q-Nn-Y9N" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="165" id="9nE-FV-goP"/>
                             <constraint firstItem="obG-Y5-kRd" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="20" symbolic="YES" id="SfN-ll-jLj"/>
                             <constraint firstAttribute="bottom" secondItem="obG-Y5-kRd" secondAttribute="bottom" constant="20" id="Y44-ml-fuU"/>
+                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="59q-Nn-Y9N" secondAttribute="bottom" constant="311.67000000000002" id="gDX-G7-kbG"/>
+                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="trailing" secondItem="59q-Nn-Y9N" secondAttribute="trailing" constant="118" id="pYt-VZ-EiJ"/>
+                            <constraint firstItem="59q-Nn-Y9N" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="118" id="sQP-Bn-cdy"/>
                         </constraints>
                     </view>
                 </viewController>
